# Brainfuck

./: CMakeLists.txt  main.c
include/: commandsSpace.h  fileReader.h  interpreter.h  pointerSpace.h  runner.h  vector.h  vector_2.h
resources/: tictactoe.b
src/: commandsSpace.c  fileReader.c  interpreter.c  pointerSpace.c  runner.c  vector.c  vector_2.c
